<resources>
    <string name="app_name">AddList</string>
    <string name="list_name">List</string>
    <string name="hello_world">AddList is a simple app that allows you create a local database of entries. \n\nDeveloped by Akinde-peters Joseph \n\nINITS Limited</string>
    <string name="action_settings">About</string>
    <string name="first">First name:</string>
    <string name="last">Last name:</string>
    <string name="gender">Choose gender:</string>
    <string name="add">Enlist</string>
    <string name="show">Show List</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="title_activity_about">About</string>
    <string name="contact">Contact</string>
</resources>

