<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textSize="20sp"
            android:id="@+id/first" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last"
            android:textSize="20sp"
            android:id="@+id/last" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editText2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"
            android:id="@+id/textView3" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PickGender"
            android:textSize="20sp"
            android:spinnerMode="dropdown"
            android:dropDownSelector="#ffbfc52c"
            android:dropDownWidth="fill_parent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/add"
            android:id="@+id/button"
            android:layout_gravity="left"
            android:layout_weight="0.18"
            android:background="#ff0d9dc5"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/show"
            android:id="@+id/button2"
            android:layout_weight="0.14"
            android:background="#ff0d9dc5"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

</RelativeLayout>
